--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ test_*.py
 .vscode/*
 test_delsys_api.py
 resources/
+__pycache__/    # This ignores the pycache directory
+*.py[cod]       # This ignores .pyc, .pyo, and .pyd files
+*$py.class      # This ignores Python class files
